--- a/Website/src/views/admin/categoryGroup/edit.ejs
+++ b/Website/src/views/admin/categoryGroup/edit.ejs
@@ -3,14 +3,17 @@
         <h1 class="mb-3">Cập nhật nhóm danh mục</h1>
         <form action="/admin/category-group/edit/<%=groupInfo.id%>" method="post" enctype="multipart/form-data">
 
-            <% errors.forEach(err => { %>
-                <li class="text-danger mb-2"><%= err.msg %></li>
+            <% locals.errors && errors.forEach(err => { %>
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <%= err.msg %>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
             <% }); %>
             
             <div class="row mb-3">
                 <label for="name" class="col-sm-2 col-form-label">Tên nhóm</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="name" id="name" value="<%=groupInfo.name%>" required>
+                    <input type="text" class="form-control" name="name" id="name" value="<%=groupInfo.name%>">
                 </div>
             </div>
 
