--- a/Website/src/views/admin/login.ejs
+++ b/Website/src/views/admin/login.ejs
@@ -39,20 +39,23 @@
                         <p class="text-center fw-bold mx-3 mb-0">Đăng nhập</p>
                     </div>
 
-                    <% errors.forEach(err => { %>
-                        <li class="text-danger mb-2"><%= err.msg %></li>
+                    <% locals.errors && errors.forEach(err => { %>
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <%= err.msg %>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
                     <% }); %>
         
                     <!-- Email input -->
                     <div class="form-outline mb-4">
                         <input type="text" id="form3Example3" name="username" class="form-control"
-                        placeholder="Tài khoản" required />
+                        placeholder="Tài khoản" />
                     </div>
         
                     <!-- Password input -->
                     <div class="form-outline mb-3">
                         <input type="password" id="form3Example4" name="password" class="form-control"
-                        placeholder="Mật khẩu" required />
+                        placeholder="Mật khẩu" />
                     </div>
         
                     <div class="d-flex justify-content-between align-items-center">
