--- a/Website/src/views/admin/user/edit.ejs
+++ b/Website/src/views/admin/user/edit.ejs
@@ -3,32 +3,35 @@
         <h1 class="mb-3">Cập nhật người dùng</h1>
         <form action="/admin/user/edit/<%=userInfo.id%>" method="post">
 
-            <% errors.forEach(err => { %>
-                <li class="text-danger mb-2"><%= err.msg %></li>
+            <% locals.errors && errors.forEach(err => { %>
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <%= err.msg %>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
             <% }); %>
             
             <div class="row mb-3">
                 <label for="fullName" class="col-sm-2 col-form-label">Tên</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="fullName" id="fullName" value="<%=userInfo.fullName%>" required>
+                    <input type="text" class="form-control" name="fullName" id="fullName" value="<%=userInfo.fullName%>">
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="email" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
-                    <input type="email" class="form-control" name="email" id="email" value="<%=userInfo.email%>" required>
+                    <input type="email" class="form-control" name="email" id="email" value="<%=userInfo.email%>">
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="phoneNumber" class="col-sm-2 col-form-label">SĐT</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="phoneNumber" id="phoneNumber" value="<%=userInfo.phoneNumber%>" required>
+                    <input type="text" class="form-control" name="phoneNumber" id="phoneNumber" value="<%=userInfo.phoneNumber%>">
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="DoB" class="col-sm-2 col-form-label">Ngày sinh</label>
                 <div class="col-sm-10">
-                    <input type="date" class="form-control" name="DoB" id="DoB" value="<%=userInfo.DoB%>" required>
+                    <input type="date" class="form-control" name="DoB" id="DoB" value="<%=userInfo.DoB%>">
                 </div>
             </div>
             <fieldset class="row mb-3">
