--- a/Website/src/views/profile/index.ejs
+++ b/Website/src/views/profile/index.ejs
@@ -71,26 +71,31 @@
                             <div class="tab-pane fade" id="tab-account" role="tabpanel" aria-labelledby="tab-account-link">
                                 <form action="/profile/edit" method="post">
                                     <% errors.forEach(err => { %>
-                                        <li class="text-danger mb-2"><%= err.msg %></li>
+                                        <div class="alert alert-warning alert-dismissible fade show mb-1" role="alert">
+                                            <%= err.msg %>
+                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                              <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
                                     <% }); %>
 
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <label>Tên *</label>
-                                            <input type="text" class="form-control" name="fullName" value="<%=curUser.fullName%>" required>
+                                            <input type="text" class="form-control" name="fullName" value="<%=curUser.fullName%>">
                                         </div><!-- End .col-sm-6 -->
 
                                         <div class="col-sm-6">
                                             <label>Số điện thoại*</label>
-                                            <input type="text" class="form-control" name="phoneNumber" value="<%=curUser.phoneNumber%>" required>
+                                            <input type="text" class="form-control" name="phoneNumber" value="<%=curUser.phoneNumber%>">
                                         </div><!-- End .col-sm-6 -->
                                     </div><!-- End .row -->
 
                                     <label>Email *</label>
-                                    <input type="email" class="form-control" name="email" value="<%=curUser.email%>" required>
+                                    <input type="email" class="form-control" name="email" value="<%=curUser.email%>">
 
                                     <label>Ngày sinh *</label>
-                                    <input type="date" class="form-control" name="DoB" value="<%=curUser.DoB%>" required>
+                                    <input type="date" class="form-control" name="DoB" value="<%=curUser.DoB%>">
 
                                     <label>Giới tính</label>
                                     <div>
@@ -103,7 +108,7 @@
                                     </div>
                                     
                                     <label>Địa chỉ *</label>
-                                    <input type="text" class="form-control" name="address" value="<%=curUser.address%>" required>
+                                    <input type="text" class="form-control" name="address" value="<%=curUser.address%>">
 
                                     <label>Mật khẩu hiện tại (Để trống nếu không muốn thay đổi)</label>
                                     <input type="password" name="oldPass" class="form-control">
