--- a/Website/src/views/admin/product/create.ejs
+++ b/Website/src/views/admin/product/create.ejs
@@ -5,7 +5,7 @@
             
             <% locals.errors && errors.forEach(err => { %>
                 <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <%= err.msg %>
+                    <span class="error-<%= err.param %>"><%= err.msg %></span>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
             <% }); %>
