--- a/Website/src/views/profile/index.ejs
+++ b/Website/src/views/profile/index.ejs
@@ -72,7 +72,7 @@
                                 <form action="/profile/edit" method="post">
                                     <% errors.forEach(err => { %>
                                         <div class="alert alert-warning alert-dismissible fade show mb-1" role="alert">
-                                            <%= err.msg %>
+                                            <span class="error-<%= err.param %>"><%= err.msg %></span>
                                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                               <span aria-hidden="true">&times;</span>
                                             </button>
