add VnPay + Paypal payment

--- a/Website/src/views/partials/categoryMenu.ejs
+++ b/Website/src/views/partials/categoryMenu.ejs
@@ -16,7 +16,7 @@
                     </div><!-- End .menu-col -->
                 </div><!-- End .col-md-8 -->
 
-                <div class="col-md-8 banner-cats" style="background-image: url('/images/upload/<%= group.img %>')"></div><!-- End .col-md-4 -->
+                <div class="col-md-8 banner-cats" style="background: url('/images/upload/<%= group.img %>') center / cover"></div><!-- End .col-md-4 -->
             </div><!-- End .row -->
         </div><!-- End .megamenu -->
     </li>
