--- a/Website/src/views/index.ejs
+++ b/Website/src/views/index.ejs
@@ -38,7 +38,7 @@
             <div class="row">
                 <% popularCategoryList.forEach(item => { %>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <a href="/product/<%= item.id %>" class="cat-block">
+                        <a href="/product-list/<%= item.id %>" class="cat-block">
                             <figure>
                                 <span>
                                     <img src="/images/upload/<%= item.img %>" alt="Category image">
